11395
I meant it in the sense of, "Mwa-ha-ha!" evil cackling.

But also, an id is an id.  Backquotes don't change anything here.  Reduced:

{code}
scala> val - = 2
-: Int = 2

scala> $minus
res0: Int = 2

scala> -  // newline or semi should disambiguate unary op
     | 1
<console>:2: error: illegal start of simple expression
       1
^

scala> -(      // contrast
     | 1
     | )
res3: Int = -1

{code}
